# xinyanruju-chip-defect-vision-rknn

./: .gitignore  AGENTS.md  README.md  findings.md  progress.md  task_plan.md  泰山派资料网址.txt
captures/: stability_640.csv  stability_640x480.csv  stability_960.csv  stability_after_warmup.csv  stability_before.csv
chip_roi/: README.md  dataset_plan.md  label_rules.md
history/: 000-history-index-and-rules.md  001-项目基础约定与子代理调度规则.md  002-板端ADB连接与IMX415采集链路已打通.md  003-电脑端OpenCV预览与YOLO_ONNX识别脚本.md  004-调焦曝光颜色闪烁与rkaiq_3A诊断.md  005-RKNN工具链与YOLO11迁移当前阻塞.md  006-YOLO11_RKNN已在RK3576_NPU单帧识别跑通.md  007-电脑端实时显示RK3576_NPU_YOLO识别画面.md  008-YOLO11_pose_RKNN已部署但IMX415_MIPI链路当前阻塞.md  008-芯片缺陷YOLOv8_RKNN云训练包.md  009-YOLOv8芯片缺陷RKNN板端实时流已适配.md  010-实拍无框与IMX415紫屏诊断.md  011-新泰山派3M芯片缺陷RKNN部署记录.md  012-WS2812环形补光SPI部署记录.md  013-MaixCAM芯片ROI预处理最小闭环.md  014-硬件视觉链路开发注意事项.md  015-chip类定位数据集目录规划.md  016-chip类伪标签生成与复核GUI.md  017-chip_capture_gui一体化实拍标注.md  018-chip_roi_yolov8_cloud_training.md  019-chip_roi_runtime_alignment_and_capture_defaults.md  020-chip_roi_realtime_deployment_and_next_stage.md  021-int8_first_runtime_plan_correction.md  022-int8_split_output_and_two_stage_runtime.md  023-two_stage_temporal_stabilization.md  024-two_stage_fps_cadence_optimization.md  025-two_stage_board_defect_temporal_filter.md  026-chip_capture_gui_two_stage_live_tuning.md  027-board_input_adjust_matches_display.md  028-two_stage_threshold_display_tuning.md  029-chip_capture_gui_dual_backend_opencv_board_ui.md  030-imx678_usb_uvc_realtime_profile.md  031-yolov8_seg_board_smoke.md  032-seg_mask_temporal_filter_and_contour_stabilization.md  033-seg_mask_only_display_and_cvat_capture_pipeline.md  034-seg_cvat_usage_review_and_pipeline_fixes.md  035-seg_mask_labels_restored_without_boxes.md  036-gui_manual_seg_sample_and_local_cvat_start.md  037-gui_session_20260506_163553_cvat_packaging_150.md  038-new_seg_samples_0792_1761_cvat_packaging_150.md  (+34 more)
plans/: 20260512_voice_stream_ws2812_cascade.md  chip_defect_yolov8_rknn_cloud_package_plan.md  chip_obb_cvat_preparation_20260509.md  chip_roi_two_stage_runtime_plan.md  minimind_o_voice_assistant_20260512.md  qt_board_gui_20260507.md  seg_cvat_train_autolabel_20260506.md  seg_full_manual_int8_train_20260507.md
rknn_work/board_yolo11_src/examples/yolo11_pose/cpp/: CMakeLists.txt  live_camera_yolo11_pose.cc  main.cc  postprocess.cc  postprocess.h  yolo11-pose.h
rknn_work/board_yolo11_src/examples/yolo11_pose/cpp/rknpu2/: yolo11-pose.cc
tools/: adb_imx415_rknn_live_view.py  adb_imx415_yolo_preview.py  adb_ws2812_ring.py  build_auto_prelabel_session.py  build_chip_defect_cloud_package.py  build_chip_roi_cloud_package.py  build_chip_roi_dataset.py  chip_roi_utils.py  diagnose_chip_defect_onnx.py  diagnose_yolov8_seg_onnx.py  minimind_o_voice_runner.py  prepare_chip_obb_cvat_tasks.py  review_chip_roi_labels.py  roi_defect_closed_loop.py  seg_cvat_pipeline.py  split_yolov8_obb_onnx_outputs.py  split_yolov8_onnx_outputs.py  (+2 more)
(+3262 files in other folders)
